# homerpdf

./: .gitignore  CLAUDE.md  README.md  build.bat  build.py  build.sh  homerpdf.spec  main.py  pyproject.toml  test_logger.py
.agent/skills/core_architecture/: SKILL.md
.agent/skills/pdf_processing/: SKILL.md
.agent/skills/redcap_management/: SKILL.md
.agent/skills/ui_development/: SKILL.md
.claude/: settings.local.json
.github/workflows/: build.yml
demographics/: demographics.md
files/hindi/md_files/: csi.md  fss.md  phq9.md  sipso.md
files/questionares/: c. Exit questionnaire- Intervention group.docx  d. Exit questionnaire- Control group.docx
intervention_doc/: merge.py  scratch.py  split.py
pdf/: overlay.py  processor.py
redcap/: FSS_vertical.csv  SIPSO.csv  adverse_event.csv  arat.csv  box_and_block_test.csv  cahai7.csv  clean_redcap.py  completed_assessment.csv  csi.csv  eq5d.csv  exit_questionnaire_control.csv  exit_questionnaire_intervention.csv  fma.csv  mal.csv  mas.csv  moca.csv  mrs.csv  nihss.csv  phq9.csv
redcap/final/: final.csv  form_display_logic.csv
redcap/translation/: csi_hi.json  csi_kn.json  csi_pa.json  eq5d_kn.json  fss_hi.json  fss_kn.json  fss_pa.json  hindi_single_doc.json  kannada_single_doc.json  mal_hi.json  mal_kn.json  mal_pa.json  moca_kn.json  phq9_hi.json  phq9_kn.json  phq9_pa.json  punjabi_single_doc.json  sipso_en.json  sipso_hi.json  sipso_kn.json  sipso_pa.json  sipso_ta.json  sipso_template.json
ui/: main_window.py  reprint_dialog.py
utils/: operation_logger.py  paths.py  validators.py
(+10 files in other folders)
