[project]
name = "homerpdf"
version = "0.1.0"
description = "Hospital PDF Manager - Add hospital numbers to medical PDFs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "pyinstaller>=6.17.0",
    "pypdf>=6.6.0",
    "pyside6>=6.10.1",
    "reportlab>=4.2.0",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.0.0",
]

[project.scripts]
homerpdf = "main:main"
